# XCPlite

./: .gitignore  A2L.c  CMakeLists.txt  XCPpi.vcxproj  XCPwi.vcxproj  clock.c  configuration.c  configuration.h  ecu.c  ecupp.cpp  main.cpp  udp.c  util.c  util.h  xcpAppl.c  xcpAppl.h  xcpSlave.c  xcpTl.c
